--- a/src/caa-cases/components/caa-filter/caa-filter.component.html
+++ b/src/caa-cases/components/caa-filter/caa-filter.component.html
@@ -3,35 +3,42 @@
     <div id="filterContainer">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-half">
-          <h2 class="govuk-heading-m">Filter assigned cases</h2>
-          <p class="govuk-body">Filter your organisation's assigned cases by either;</p>
           <form class="form" [formGroup]="caaFormGroup">
             <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="filter-assigned-cases">
+              <fieldset *ngIf="caaCasesPageType === caaCasesPageTypeLookup.AssignedCases" class="govuk-fieldset"
+                aria-describedby="filter-assigned-cases-hint">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                  <h2 class="govuk-fieldset__heading">
+                    {{caaFilterHeading}}
+                  </h2>
+                </legend>
+                <div id="filter-assigned-cases-hint" class="govuk-body">
+                  Filter your organisation's assigned cases by either;
+                </div>
                 <div class="govuk-radios" data-module="govuk-radios">
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="caa-filter-all-assignees" name="caa-filter" type="radio"
-                      [checked]="selectedFilterType === caaCasesFilterType.allAssignees"
-                      value="{{caaCasesFilterType.allAssignees}}"
+                      [checked]="selectedFilterType === caaCasesFilterType.AllAssignees"
+                      value="{{caaCasesFilterType.AllAssignees}}"
                       formControlName="caa-filter"
                       data-aria-controls="caa-filter-all-assignees"
-                      (click)="selectFilterOption(caaCasesFilterType.allAssignees)">
+                      (click)="selectFilterOption(caaCasesFilterType.AllAssignees)">
                     <label class="govuk-label govuk-radios__label" for="caa-filter-all-assignees">
                       All assignees
                     </label>
                   </div>
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="caa-filter-assignee-name" name="caa-filter" type="radio"
-                      [checked]="selectedFilterType === caaCasesFilterType.assigneeName"
-                      value="{{caaCasesFilterType.assigneeName}}"
+                      [checked]="selectedFilterType === caaCasesFilterType.AssigneeName"
+                      value="{{caaCasesFilterType.AssigneeName}}"
                       formControlName="caa-filter"
                       data-aria-controls="caa-filter-assignee-name"
-                      (click)="selectFilterOption(caaCasesFilterType.assigneeName)">
+                      (click)="selectFilterOption(caaCasesFilterType.AssigneeName)">
                     <label class="govuk-label govuk-radios__label" for="caa-filter-assignee-name">
                       Assignee name
                     </label>
                   </div>
-                  <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.assigneeName}">
+                  <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.AssigneeName}">
                     <div class="govuk-form-group">
                       <label class="govuk-label" for="assignee-person">
                         Type the name and select an available match option
@@ -41,16 +48,16 @@
                   </div>
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="caa-filter-case-reference-number" name="caa-filter" type="radio"
-                      [checked]="selectedFilterType === caaCasesFilterType.caseReferenceNumber"
-                      value="{{caaCasesFilterType.caseReferenceNumber}}"
+                      [checked]="selectedFilterType === caaCasesFilterType.CaseReferenceNumber"
+                      value="{{caaCasesFilterType.CaseReferenceNumber}}"
                       formControlName="caa-filter"
                       data-aria-controls="caa-filter-case-reference-number"
-                      (click)="selectFilterOption(caaCasesFilterType.caseReferenceNumber)">
+                      (click)="selectFilterOption(caaCasesFilterType.CaseReferenceNumber)">
                     <label class="govuk-label govuk-radios__label" for="caa-filter-case-reference-number">
                       Case reference number
                     </label>
                   </div>
-                  <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.caseReferenceNumber}">
+                  <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.CaseReferenceNumber}">
                     <div class="govuk-form-group">
                       <label class="govuk-label" for="case-reference-number">
                         Enter the 16 digit case reference number
@@ -60,6 +67,15 @@
                   </div>
                 </div>
               </fieldset>
+              <ng-container *ngIf="caaCasesPageType === caaCasesPageTypeLookup.UnassignedCases">
+                <h2 class="govuk-heading-m">{{caaFilterHeading}}</h2>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="case-reference-number">
+                    Enter the 16 digit case reference number
+                  </label>
+                  <input class="govuk-input" formControlName="case-reference-number" id="case-reference-number" name="case-reference-number" type="text">
+                </div>
+              </ng-container>
             </div>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <button class="govuk-button govuk-button--secondary govuk-!-margin-right-3" (click)="search()">
