EUI-8969: MyHMCTS Terms and Conditions changes (#1183)
* EUI-8969: MyHMCTS Terms and Conditions changes

Update with latest MyHMCTS Terms and Conditions wording; minor change to agreement checkbox wording on Check Your Answers page.

* Temporarily ignore CVE vulnerabilities

* EUI-8969: MyHMCTS Terms and Conditions changes

Add direct link to section on web scraping.

--- a/src/register-org/components/organisation-type/organisation-type.component.html
+++ b/src/register-org/components/organisation-type/organisation-type.component.html
@@ -21,7 +21,7 @@
                 </h1>
               </legend>
               <div class="govuk-hint">
-                Select the type of organisation you are registering. If you are not sure, select 'other'.
+                Select the type of organisation you are registering. If you are not sure, select 'Other'.
               </div>
               <div class="govuk-radios" id="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item" *ngFor="let organisationType of organisationTypes">
